[package]
name = "telereads"
authors = ["Sergiu Puscas <srg.pscs@gmail.com>"]
description = "@TelereadsBot is an inline bot that allows you to search for books and quickly share them in a conversation."
keywords = ["telegram", "bot", "goodreads", "books"]
license = "MIT"
repository = "https://github.com/harababurel/telereads"
version = "0.1.2"

[dependencies]
ammonia = "1.2.0"
log = "0.4.5"
number_prefix = "0.2.8"
pretty_env_logger = "0.2.4"
retry = "0.4.0"
reqwest = "0.9.3"
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"
serde-xml-rs = "0.2.1"
