[package]
name = "telereads"
authors = ["Sergiu Puscas <srg.pscs@gmail.com>"]
description = "@TelereadsBot is an inline bot that allows you to search for books and quickly share them in a conversation."
keywords = ["telegram", "bot", "goodreads", "books"]
license = "MIT"
repository = "https://github.com/harababurel/telereads"
version = "0.1.3"

[dependencies]
ammonia = "2.0.0"
log = "0.4.6"
number_prefix = "0.2.8"
pretty_env_logger = "0.3.0"
retry = "0.4.0"
reqwest = "0.9.10"
serde = "1.0.88"
serde_json = "1.0.38"
serde_derive = "1.0.88"
serde-xml-rs = "0.3.1"
