[package]
name = "telereads"
authors = ["Sergiu Puscas <srg.pscs@gmail.com>"]
description = "@TelereadsBot is an inline bot that allows you to search for books and quickly share them in a conversation."
keywords = ["telegram", "bot", "goodreads", "books"]
license = "MIT"
repository = "https://github.com/harababurel/telereads"
version = "0.1.8"
edition = "2024"

[dependencies]
ammonia = "4.1"
log = "0.4"
number_prefix = "0.4"
pretty_env_logger = "0.5"
retry = "2.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
serde-xml-rs = "0.8"
